Revert "change in css"
This reverts commit 0cdc177bcb33d37916a0bb618ae4aa45101c330b.

--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>URL Shortener</title>
+    <title>Bootstrap Example</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-    rel="stylesheet"
-    href="style.css"
-  />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     />
-   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
-   
 
     <script>
         function genShort(event){
@@ -44,7 +38,7 @@
   </head>
   <body>
     <div class="container">
-      <h2>URL shortener</h2>
+      <h2>Vertical (basic) form</h2>
 
       <form onsubmit="genShort(event)">
         <div class="form-group">
